# Datos-II---Tarea-Extraclase-2

Tarea extraclase 2/: CMakeLists.txt  Cajero_automatico.cpp  Cajero_automatico.h  Facturacion.cpp  Facturacion.h  Proxy.cpp  Proxy.h  Transaccion.cpp  Transaccion.h  Usuario.cpp  Usuario.h  Verificacion.cpp  Verificacion.h  main.cpp
