cmake_minimum_required(VERSION 3.17)
project(Tarea_extraclase_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea_extraclase_2 main.cpp Cajero_automatico.cpp Cajero_automatico.h Verificacion.cpp Verificacion.h Transaccion.cpp Transaccion.h Facturacion.cpp Facturacion.h Proxy.cpp Proxy.h Usuario.cpp Usuario.h)